styles.css
:root {
  --font-1: "Oswald", sans-serif;
  --font-2: "Poppins", sans-serif;
  --font-3: "Protest Revolution", sans-serif;
  --color-1: #333;
  --color-2: #232323;
  --bg-color-1: #f5e9db;
  --bg-color-2: #ffffff;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

body {
  background-color: var(--bg-color-1);
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

h2 {
  font-family: var(--font-1);
  text-align: center;
  font-size: 1.25rem;
  font-weight: 500;
  margin-bottom: 0.9375rem;
  letter-spacing: 0.0625rem;
  text-transform: uppercase;
}

.icon,
.bar-icon {
  font-size: 1.5625rem;
  color: var(--color-1);
}

/* ---------------- Header Navigation Pane ------------------ */

#header-img {
  width: 3.125rem;
  object-fit: contain;
}

.topnav,
.ham-nav-menu {
  background-color: var(--bg-color-2);
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  box-shadow: 0px 1px 10px 2px var(--color-2);
  z-index: 10;
}

#myLinks {
  display: flex;
}

.nav-link {
  display: block;
  text-decoration: none;
  color: var(--color-1);
  padding: 0.8125rem;
  font-family: var(--font-2);
  cursor: pointer;
  align-items: center;
  transition: background-color 0.7s, color 0.5s, border-radius 0.7s;
}

#myLinks .nav-link:hover,
.color:hover {
  background-color: var(--color-1);
  color: var(--bg-color-2);
  border-radius: 1rem 2.4rem 4rem;
}

#logo-box {
  display: flex;
  color: var(--color-1);
  align-items: center;
  padding: 0.1875rem;
}

.product-name {
  font-size: 1.6875rem;
  margin-left: 1rem;
  font-weight: 550;
  font-family: var(--font-3);
}

#ham-menu,
.bar-icon {
  display: none;
}

/* ------------------ Handles the spacing between sections ------------ */
/* -------- I need to find a way around to refactor this code to something better. Including the individual margin tops in different sections. */

section::before {
  display: block;
  content: " ";
  margin-top: -180px;
  height: 290px;
  visibility: hidden;
  pointer-events: none;
}

section {
  margin: -60px auto;
  text-align: center;
  padding: 10px;
}

/* -------------- Hero Section ---------- */
#hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin: auto;
  padding: 0.625rem;
  margin-top: 3.75rem;
}

.aside {
  padding: 1.25rem 0.625rem 0.625rem;
}

.aside h1 {
  font-family: var(--font-3);
  font-size: 1.875rem;
  color: var(--color-2);
  text-align: center;
  margin-bottom: 0.9375rem;
  font-weight: 570;
}

.aside p {
  color: var(--color-1);
  font-family: var(--font-2);
  margin-bottom: 0.625rem;
}

.side {
  width: 100%;
}

#hero-img {
  width: 100%;
  object-fit: cover;
  height: 25rem;
  border-radius: 0.625rem;
  margin-top: 0.625rem;
  box-shadow: 1px 1px 10px grey;
}

/* ----------- iframe section --------- */

#video {
  width: 100%;
  border-radius: 0.4375rem;
}

/* ----------- Gallery Section ---------- */
/* Using the grid system here helps make the gallery more responsive. */
.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
  gap: 0.5rem;
}

.gallery img {
  height: 21.875rem;
  width: 100%;
  object-fit: cover;
  border-radius: 0.625rem;
}

/* ------------ Price Section ---------- */
.pricing-box {
  display: flex;
  flex-direction: column;
}

.price {
  width: 80%;
  padding: 0.625rem;
  margin: 0 auto 1.25rem;
  border-radius: 0.625rem;
  box-shadow: 1px 1px 10px grey;
  margin-top: 0.625rem;
}

.price:hover,
.gallery img:hover {
  transform: scale(1.02);
  transition: 0.4s;
  cursor: pointer;
}

.plus {
  font-family: var(--font-1);
  font-size: 1.25rem;
}

.list,
h3 {
  font-family: var(--font-2);
  margin-bottom: 0.3125rem;
  color: var(--color-1);
}

/* ----------- Contact Section ------------- */
#form {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  justify-content: center;
}

#email {
  width: 60%;
}

@keyframes tilt-shaking {
  0% {
    transform: rotate(0deg);
  }
  25% {
    transform: rotate(1deg);
  }
  50% {
    transform: rotate(0deg);
  }
  75% {
    transform: rotate(-1deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

#form-section input {
  padding: 0.75rem;
  border-radius: 0.4375rem;
  box-shadow: 1px 1px 10px grey;
  border: none;
  font-family: var(--font-2);
  font-weight: 700;
  margin: 0.625rem auto;
  transition: box-shadow 2s;
}

#form-section input:focus {
  outline: none;
  box-shadow: 1px 1px 10px 2px var(--color-2);
}

.shaking-input {
  animation: tilt-shaking 0.2s ease-out 5;
}

#submit {
  width: 40%;
  display: flex;
  justify-content: center;
}

#submit:hover {
  transition: 0.9s;
  cursor: pointer;
  background-color: var(--color-1);
  color: var(--bg-color-2);
}

/* ----------- Footer ---------- */
footer {
  text-align: right;
  font-family: var(--font-3);
  font-size: 0.9375rem;
  padding: 1.875rem 1.25rem 0.125rem;
}

/* ------ MEDIA QUERIES ----- */

/* Applies when the width <= 760px */
@media only screen and (760px >= width) {
  .ham-nav-menu {
    padding: 0.375rem;
  }

  #hamLinks {
    width: 80%;
  }

  .bar-icon {
    display: flex;
  }

  .color:hover {
    border-radius: 1.5rem 0.4rem 1.2rem;
  }

  .close {
    display: block;
    padding: 6.8rem 1.25rem;
  }
}

/* This applies when the width is 600px upwards */
@media only screen and (min-width: 760px) {
  #hero {
    flex-direction: row;
    justify-content: space-around;
    /* margin-top: 1.875rem; */
    /* padding-top: 1.25rem; */
  }

  .aside,
  .side,
  .price {
    width: 43%;
  }

  #video {
    width: 98%;
  }

  .pricing-box {
    flex-direction: row;
  }
}

/* 490px / 16px = 30.625em */
@media (max-width: 30.625em) {
  .gallery {
    grid-template-columns: 1fr;
  }
}

@media only screen and (455px >= width) {
  .product-name {
    font-size: 1.3rem;
  }

  #header-img {
    width: 2.1rem;
  }
}

/* This applies when the width is < or = 269px */
@media only screen and (269px >= width) {
  #nav-bar {
    justify-content: space-around;
  }

  .product-name {
    display: none;
  }
}

/* This applies when the width is < or = 450px */
/* @media only screen and (455px >= width) {
  #hero {
    margin-top: 80px;
  }
} */

/* This applies when the width is < or = 204px */
/* @media only screen and (204px >= width) {
  #hero {
    margin-top: 13rem;
  }
} */

